--- a/52634214/WpfApp/WpfApp/WpfApp.csproj
+++ b/52634214/WpfApp/WpfApp/WpfApp.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -98,10 +101,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommonServiceLocator">
-      <Version>1.3.0</Version>
+      <Version>2.0.4</Version>
     </PackageReference>
     <PackageReference Include="Prism.Core">
-      <Version>6.3.0</Version>
+      <Version>7.0.0.396</Version>
     </PackageReference>
     <PackageReference Include="Prism.Unity">
       <Version>6.3.0</Version>
@@ -110,7 +113,7 @@
       <Version>6.3.0</Version>
     </PackageReference>
     <PackageReference Include="Unity">
-      <Version>4.0.1</Version>
+      <Version>5.8.11</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
